--- a/asset/scss/_main.scss
+++ b/asset/scss/_main.scss
@@ -54,6 +54,7 @@ article h4{
     color: rgb(255, 116, 139);
     border-radius: 5%;
     margin-bottom: 3rem;
+    transition: all ease-in-out 0.5s;
 }
 
 .methode2{
@@ -138,6 +139,8 @@ article h4{
     border: 2px solid rgb(255, 116, 139);
     color: rgb(255, 116, 139);
     border-radius: 5%;
+    transition: all ease-in-out 0.5s;
+
 }
 
 h3{
@@ -250,6 +253,7 @@ h3{
     color: rgb(255, 116, 139);
     border-radius: 5%;
     margin-bottom: 3rem;
+    transition: all ease-in-out 0.5s;
 }
 
 .line2{
