--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -31,10 +31,51 @@ h4 {
 
 a {
   color: black;
+  transition: all ease-in-out 0.2s;
 }
 
 a:hover {
   color: rgb(255, 116, 139);
+}
+
+.btn-style1:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(255, 116, 139);
+}
+
+.btn-style2:hover {
+  color: rgb(255, 116, 139);
+  background-color: #F6F6F6;
+  border: 2px solid rgb(255, 116, 139);
+}
+
+.btn-style1:active {
+  color: #46DAC8;
+  background-color: white;
+  border: 2px solid #46DAC8;
+}
+
+.btn-style2:active {
+  transform: translateY(5px);
+  box-shadow: 0px -5px 5px rgba(255, 116, 139, 0.64);
+}
+
+.btn-bleu:active {
+  color: rgba(71, 183, 252, 0.688);
+  background-color: white;
+  border: 2px solid rgba(71, 183, 252, 0.688);
+}
+
+.btn-jaune:active {
+  color: rgb(255, 225, 77);
+  background-color: white;
+  border: 2px solid rgb(255, 225, 77);
+}
+
+.btn-violet:active {
+  color: rgba(171, 71, 252, 0.688);
+  background-color: white;
+  border: 2px solid rgba(171, 71, 252, 0.688);
 }
 
 nav {
@@ -88,6 +129,7 @@ nav ul {
   color: white;
   border-radius: 5%;
   margin-bottom: 10rem;
+  transition: all ease-in-out 0.5s;
 }
 
 .titreSection {
@@ -145,6 +187,7 @@ article h4 {
   color: rgb(255, 116, 139);
   border-radius: 5%;
   margin-bottom: 3rem;
+  transition: all ease-in-out 0.5s;
 }
 
 .methode2 {
@@ -223,6 +266,7 @@ article h4 {
   border: 2px solid rgb(255, 116, 139);
   color: rgb(255, 116, 139);
   border-radius: 5%;
+  transition: all ease-in-out 0.5s;
 }
 
 h3 {
@@ -326,6 +370,7 @@ h3 {
   color: rgb(255, 116, 139);
   border-radius: 5%;
   margin-bottom: 3rem;
+  transition: all ease-in-out 0.5s;
 }
 
 .line2 {
@@ -380,17 +425,6 @@ footer {
 
 .footer2 {
   text-align: center;
-}
-
-.btn-style1:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(255, 116, 139);
-}
-
-.btn-style2:hover {
-  color: rgb(255, 116, 139);
-  background-color: #F6F6F6;
-  border: 2px solid rgb(255, 116, 139);
 }
 
 @media screen and (max-width: 1024px) {
