--- a/asset/scss/_general.scss
+++ b/asset/scss/_general.scss
@@ -21,8 +21,53 @@ h4{
 
 a{
     color: black;
+    transition: all ease-in-out 0.2s;
 }
 
 a:hover{
     color: rgb(255, 116, 139);
+}
+
+.btn-style1:hover{
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 116, 139)
+
+}
+
+.btn-style2:hover{
+    color: rgb(255, 116, 139);
+    background-color: #F6F6F6;
+    border: 2px solid rgb(255, 116, 139);
+
+}
+
+.btn-style1:active{
+    color: #46DAC8;
+    background-color: white;
+    border: 2px solid #46DAC8;
+}
+
+
+.btn-style2:active{
+    transform: translateY(5px);
+    box-shadow: 0px -5px 5px rgba(255, 116, 139, 0.64);
+}
+
+
+.btn-bleu:active{
+    color: rgba(71, 183, 252, 0.688);
+    background-color: white;
+    border: 2px solid rgba(71, 183, 252, 0.688);
+}
+
+.btn-jaune:active{
+    color: rgb(255, 225, 77);
+    background-color: white;
+    border: 2px solid rgb(255, 225, 77);
+}
+
+.btn-violet:active{
+    color: rgba(171, 71, 252, 0.688);
+    background-color: white;
+    border: 2px solid rgba(171, 71, 252, 0.688);
 }
